--- a/app/src/main/res/layout/item_forum_big_text.xml
+++ b/app/src/main/res/layout/item_forum_big_text.xml
@@ -9,7 +9,7 @@
 
     <include layout="@layout/merge_user_info_header_1" />
 
-    <com.backpackers.android.ui.widget.ReadMoreTextView
+    <com.backpackers.android.ui.widget.BaselineGridTextView
         android:id="@+id/text_content"
         style="@style/Widget.Yoloo.Post"
         android:layout_width="0dp"
@@ -22,8 +22,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:trimLines="10"
-        app:trimMode="trimModeLine"
         tools:text="@string/lorem_ipsum" />
 
     <com.luseen.autolinklibrary.AutoLinkTextView
