--- a/app/src/main/res/layout/item_forum_small_image2.xml
+++ b/app/src/main/res/layout/item_forum_small_image2.xml
@@ -118,7 +118,7 @@
 
     </LinearLayout>
 
-    <com.backpackers.android.ui.widget.ReadMoreTextView
+    <com.backpackers.android.ui.widget.BaselineGridTextView
         android:id="@+id/text_content"
         style="@style/Widget.Yoloo.Post"
         android:layout_width="wrap_content"
@@ -128,8 +128,6 @@
         android:layout_marginLeft="56dp"
         android:layout_marginRight="104dp"
         android:layout_marginStart="56dp"
-        app:trimLines="7"
-        app:trimMode="trimModeLine"
         tools:text="@string/lorem_ipsum" />
 
     <ImageView
